<resources>
    <string name="app_name">Power Monitor</string>
    <string name="action_settings">About</string>
    <string name="banner_ad_unit_id">ca-app-pub-3556824760468414/8931714888</string>
    <string name="capacity">Capacity</string>
    <string name="charged">Charged</string>
    <string name="time">Time</string>
    <string name="avgcurrent">Avg. Current</string>
    <string name="instcurrent">Inst. Current</string>
    <string name="voltage">Voltage</string>
    <string name="condition">Condition</string>
    <string name="temperature">Temp.</string>
    <string name="power">Power</string>
    <string name="battery">Battery</string>
    <string name="AC">AC</string>
    <string name="USB">USB</string>
    <string name="wireless">Wireless</string>
    <string name="unknown">Unknown</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="notcharging">Not Charging</string>
    <string name="fullycharged">Fully Charged</string>
    <string name="graphtitle">Power Curve</string>
    <string name="xaxis">Charge</string>
    <string name="yaxis">Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
